<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Single root container -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <!-- Top View -->
        <View
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/bg_view" />

        <!-- Dashboard Title -->
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="38dp"
            android:text="Dashboard"
            android:textColor="@color/text_color"
            android:textSize="40sp"
            android:textStyle="bold" />

        <!-- GridLayout Below Top View -->
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="-80dp"
            android:columnCount="2"
            android:padding="16dp"
            android:useDefaultMargins="true">

            <!-- About Phone Card -->
            <androidx.cardview.widget.CardView
                android:id="@+id/aboutPhonecard"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_columnWeight="1"
                app:cardCornerRadius="15dp"
                app:cardElevation="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_gravity="center_horizontal"
                        android:padding="12dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_about_phone" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:paddingTop="8dp"
                        android:text="About Phone"
                        android:textColor="@color/text_color"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Sensors Card -->
            <androidx.cardview.widget.CardView
                android:id="@+id/sensorsCard"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_columnWeight="1"
                app:cardCornerRadius="15dp"
                app:cardElevation="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_gravity="center_horizontal"
                        android:padding="12dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_sensors" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:paddingTop="8dp"
                        android:text="Sensor Test"
                        android:textColor="@color/text_color"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- SIM Settings Card -->
            <androidx.cardview.widget.CardView
                android:id="@+id/simSettingsCard"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_columnWeight="1"
                app:cardCornerRadius="15dp"
                app:cardElevation="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_gravity="center_horizontal"
                        android:padding="12dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_sim_card_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:paddingTop="8dp"
                        android:text="SIM Settings"
                        android:textColor="@color/text_color"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Display Settings Card -->
            <androidx.cardview.widget.CardView
                android:id="@+id/displaySettingsCard"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_columnWeight="1"
                app:cardCornerRadius="15dp"
                app:cardElevation="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_gravity="center_horizontal"
                        android:padding="12dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_display_settings" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:paddingTop="8dp"
                        android:text="Display"
                        android:textColor="@color/text_color"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Wi-Fi Card -->
            <androidx.cardview.widget.CardView
                android:id="@+id/wifiCard"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_columnWeight="1"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="15dp"
                app:cardElevation="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_gravity="center_horizontal"
                        android:padding="12dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_network_wifi" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:paddingTop="8dp"
                        android:text="Network"
                        android:textColor="@color/text_color"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Battery Card -->
            <androidx.cardview.widget.CardView
                android:id="@+id/batteryCard"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_columnWeight="1"
                app:cardCornerRadius="15dp"
                app:cardElevation="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_battery_alert" />

                    <TextView
                        android:id="@+id/batteryDetailsText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="Battery"
                        android:textColor="@color/text_color"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Call Logs Card -->
            <androidx.cardview.widget.CardView
                android:id="@+id/callLogCard"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_call_log"
                        android:contentDescription="@string/call_logs_desc"
                        android:padding="12dp"
                        android:scaleType="fitCenter" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/call_logs"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:paddingTop="8dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Storage Test Card -->
            <androidx.cardview.widget.CardView
                android:id="@+id/storageTestCard"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_storage"
                        android:contentDescription="@string/storage_test_desc"
                        android:padding="12dp"
                        android:scaleType="fitCenter" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/storage_test"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:paddingTop="8dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <!-- SOC Card -->
            <androidx.cardview.widget.CardView
                android:id="@+id/socCard"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_columnWeight="1"
                android:onClick="openSocInfo"
                app:cardCornerRadius="15dp"
                app:cardElevation="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_gravity="center_horizontal"
                        android:padding="12dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_cpu" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:paddingTop="8dp"
                        android:text="SOC Info"
                        android:textColor="@color/text_color"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </GridLayout>



        <!-- Device Info Text -->
        <TextView
            android:id="@+id/deviceInfoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:text="Fetching Device Info..."
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />
    </RelativeLayout>
</ScrollView>